--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -40,7 +41,6 @@
                                         <state key="normal" image="stopRecordButton"/>
                                         <connections>
                                             <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b5e-jd-bAv"/>
-                                            <segue destination="ggO-iT-QHi" kind="show" id="27S-2I-PbR"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -56,16 +56,17 @@
                     <connections>
                         <outlet property="recordButton" destination="h3O-FN-Wl5" id="iGg-Gk-y4G"/>
                         <outlet property="stopRecordButton" destination="QbX-PH-X3y" id="lw2-mm-OUn"/>
+                        <segue destination="ggO-iT-QHi" kind="show" identifier="stopRecording" id="zvR-tZ-ah6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="887" y="692"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="Cct-dm-ARu">
             <objects>
-                <viewController id="ggO-iT-QHi" sceneMemberID="viewController">
+                <viewController id="ggO-iT-QHi" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sGT-c0-Hjz"/>
                         <viewControllerLayoutGuide type="bottom" id="8hk-YN-tds"/>
@@ -73,8 +74,112 @@
                     <view key="view" contentMode="scaleToFill" id="nwz-hc-FgZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.47843137254901957" green="0.50588235294117645" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Km9-Lt-8sN">
+                                <rect key="frame" x="16" y="64" width="343" height="583"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZzQ-QK-qQ0">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="519"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pgY-6g-ik2">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="173"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5v-Q1-zF6" userLabel="Slow Button">
+                                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="Slow"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="T9i-YC-wwO"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P3R-Z0-KIH" userLabel="Fast Button">
+                                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="Fast"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="hta-bQ-SmC"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Wnk-sC-LMz">
+                                                <rect key="frame" x="0.0" y="173" width="343" height="173"/>
+                                                <subviews>
+                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ns-Vi-Ocu" userLabel="High Pitch">
+                                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="HighPitch"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="PTo-EC-BvW"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9X-V7-ZIy" userLabel="Low Pitch">
+                                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="LowPitch"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="znz-Jr-DdE"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="PeZ-DU-swK">
+                                                <rect key="frame" x="0.0" y="346" width="343" height="173"/>
+                                                <subviews>
+                                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dc8-EE-P9K" userLabel="EchoButton">
+                                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="Echo"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="xKm-PU-NAo"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tyr-06-UDH" userLabel="ReverbButton">
+                                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="173"/>
+                                                        <state key="normal" image="Reverb"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="ggO-iT-QHi" eventType="touchUpInside" id="GeR-hN-Az5"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tJH-FH-uji">
+                                        <rect key="frame" x="0.0" y="519" width="343" height="64"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIv-oh-NwH" userLabel="Stopbutton">
+                                                <rect key="frame" x="139.5" y="0.0" width="64" height="64"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="64" id="Ffd-Uo-v0b"/>
+                                                    <constraint firstAttribute="height" constant="64" id="Wd1-ZP-IKY"/>
+                                                </constraints>
+                                                <state key="normal" image="stopRecordButton"/>
+                                                <connections>
+                                                    <action selector="stopButtonPressed:" destination="ggO-iT-QHi" eventType="touchUpInside" id="PUi-LO-1Hb"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="kIv-oh-NwH" secondAttribute="bottom" id="fMx-JL-26H"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="8hk-YN-tds" firstAttribute="top" secondItem="Km9-Lt-8sN" secondAttribute="bottom" constant="20" id="1sB-n2-AWD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Km9-Lt-8sN" secondAttribute="trailing" id="i73-hW-OW2"/>
+                            <constraint firstItem="Y9X-V7-ZIy" firstAttribute="top" secondItem="sGT-c0-Hjz" secondAttribute="bottom" constant="173" id="kaz-HT-5M9"/>
+                            <constraint firstItem="Km9-Lt-8sN" firstAttribute="top" secondItem="sGT-c0-Hjz" secondAttribute="bottom" id="oVh-b7-jun"/>
+                            <constraint firstItem="Km9-Lt-8sN" firstAttribute="leading" secondItem="nwz-hc-FgZ" secondAttribute="leadingMargin" id="rGa-Hc-2FI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="P3R-Z0-KIH" id="gNv-oQ-qFb"/>
+                        <outlet property="echoButton" destination="Dc8-EE-P9K" id="Kyr-ze-WYQ"/>
+                        <outlet property="rabbitButton" destination="1Ns-Vi-Ocu" id="68A-Gw-5wJ"/>
+                        <outlet property="reverbButton" destination="Tyr-06-UDH" id="5bL-gJ-kA2"/>
+                        <outlet property="snailButton" destination="R5v-Q1-zF6" id="wQy-4Q-sbx"/>
+                        <outlet property="stopButton" destination="kIv-oh-NwH" id="z7A-qZ-5OQ"/>
+                        <outlet property="vaderButton" destination="Y9X-V7-ZIy" id="Y3o-eS-7C2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="swh-BB-zlb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -100,6 +205,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
         <image name="recordButton" width="155" height="155"/>
         <image name="stopRecordButton" width="155" height="155"/>
     </resources>
