--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0Sp-ta-wjt">
-                                <rect key="frame" x="110" y="216" width="155" height="235"/>
+                                <rect key="frame" x="110" y="196" width="155" height="275.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3O-FN-Wl5">
                                         <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
@@ -32,8 +32,14 @@
                                             <action selector="record:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iaE-Pz-T50"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XR2-Wi-lpa">
+                                        <rect key="frame" x="24" y="175" width="107" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QbX-PH-X3y">
-                                        <rect key="frame" x="47.5" y="175" width="60" height="60"/>
+                                        <rect key="frame" x="47.5" y="215.5" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="FYN-PH-NHf"/>
                                             <constraint firstAttribute="height" constant="60" id="z84-au-NqL"/>
@@ -55,6 +61,7 @@
                     <navigationItem key="navigationItem" title="Pitch Perfect" id="tTU-8D-CaB"/>
                     <connections>
                         <outlet property="recordButton" destination="h3O-FN-Wl5" id="iGg-Gk-y4G"/>
+                        <outlet property="recordingLabel" destination="XR2-Wi-lpa" id="NnG-rz-Ygw"/>
                         <outlet property="stopRecordButton" destination="QbX-PH-X3y" id="lw2-mm-OUn"/>
                         <segue destination="ggO-iT-QHi" kind="show" identifier="stopRecording" id="zvR-tZ-ah6"/>
                     </connections>
